# data-warehourse

./: .env  README.md  crawl.py  requirements.txt  setup.cfg
service/extract_service/: .env  main.py
service/extract_service/src/config/: setting.py
service/extract_service/src/crawler/: base_crawler.py  paging_base_crawler.py  source_1_crawler.py  source_B_1_crawler.py
service/extract_service/src/util/: file_handler.py
sql/: estate_controller.sql  estate_datamart.sql  estate_staging.sql  estate_warehouse.sql
src/: main.py
src/config/: __init__.py  database.py  mail.py  procedure.py  setting.py
src/crawler/: __init__.py  base_crawler.py  source_1_crawler.py
src/entity/: __init__.py
src/service/: AppException.py
src/service/config_service/: config_service.py
src/service/controller_service/: crawl_controller.py  database_controller.py  load_staging_controller.py  main.py  transformation_controller.py
src/service/extract_service/: main.py
src/service/extract_service/crawler/: config_crawler.py  paging_base_crawler.py  source_A_1_crawler.py  source_B_1_crawler.py
src/service/load_data_service/: main.py
src/service/load_data_warehourse_service/: main.py
src/service/notification_service/: email.py
src/service/transformation_service/: main.py  transformation_service.py
src/util/: __init__.py  file_handler.py  file_util.py  flat_data.py  interface_converter.py
