[metadata]
name = crawler
version = 0.1.0
description = A short description of your project
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = ducvui2003@gmail.com
[options]
packages = find:
package_dir = src
python_requires = >=3.6
[options.packages.find]
where = src